# moragents

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTABILITIES.md  CONTRIBUTE.md  DISCLAIMER.md  Instructions.md  LICENSE  LICENSE.md  MORagents.spec  PRIVACY.md  Packaging_Instructions_Windows.md  Packaging_Instructions_macOS.md  README.md  README_WINDOWS_DEV_BUILD.md  config.py  deps.txt  main.py  main_ui_bak.py  pyproject.toml  requirements.txt  runtime_hook.py  runtime_hook_windows.py  runtime_setup_linux.py  runtime_setup_macos.py  runtime_setup_windows.py  wizard_windows.iss
submodules/moragents_dockers/agents/: Dockerfile  Dockerfile-apple  README.md  alembic.ini  conftest.py  download_model.py  get-pip.py  model_config.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt
submodules/moragents_dockers/agents/alembic/: env.py
submodules/moragents_dockers/agents/alembic/versions/: 17c8d2dc869c_create_initial_tables.py
submodules/moragents_dockers/agents/config/: config-dev.ini  config-prod.ini  config.ini  logging-prod.ini  logging.ini
submodules/moragents_dockers/agents/src/: README-UI.md  agent_manager.py  app.py  cdp.py  config.py  delegator.py
submodules/moragents_dockers/agents/src/agents/: README.md  create_new_agent.sh
submodules/moragents_dockers/agents/src/agents/agent_core/: agent.py
submodules/moragents_dockers/agents/src/agents/base_agent/: README.md  agent.py  config.py  routes.py  tools.py
submodules/moragents_dockers/agents/src/agents/crypto_data/: README.md  agent.py  config.py  routes.py  tools.py
submodules/moragents_dockers/agents/src/agents/dca_agent/: agent.py  config.py  routes.py  tools.py
submodules/moragents_dockers/agents/src/agents/default/: agent.py  config.py
submodules/moragents_dockers/agents/src/agents/dexscreener/: agent.py  config.py  models.py  tools.py
submodules/moragents_dockers/agents/src/agents/imagen/: agent.py  config.py
submodules/moragents_dockers/agents/src/agents/mor_claims/: agent.py  config.py  routes.py  tools.py
submodules/moragents_dockers/agents/src/agents/mor_rewards/: agent.py  config.py  tools.py
submodules/moragents_dockers/agents/src/agents/news_agent/: agent.py  config.py  tools.py
submodules/moragents_dockers/agents/src/agents/rag/: agent.py  config.py  routes.py
submodules/moragents_dockers/agents/src/agents/realtime_search/: agent.py  config.py
submodules/moragents_dockers/agents/src/agents/rugcheck/: agent.py  config.py
submodules/moragents_dockers/agents/src/agents/token_swap/: README.md  agent.py  config.py  routes.py  tools.py
submodules/moragents_dockers/agents/src/agents/tweet_sizzler/: agent.py  config.py  routes.py
submodules/moragents_dockers/agents/src/agents/web_search/: agent.py
submodules/moragents_dockers/agents/src/base_agent/src/: agent.py  config.py  tools.py
submodules/moragents_dockers/agents/src/claim_agent/src/: agent.py  config.py  tools.py
submodules/moragents_dockers/agents/src/controllers/: chat_controller.py  chat_message_controller.py  conversation_controller.py  delegation_controller.py  user_controller.py  user_setting_controller.py
submodules/moragents_dockers/agents/src/models/: __init__.py  config.py  core.py  messages.py  models.py  session.py
submodules/moragents_dockers/agents/src/routes/: agent_manager_routes.py  chat_manager_routes.py  chat_routes.py  delegation_routes.py  key_manager_routes.py  wallet_manager_routes.py  workflow_manager_routes.py
submodules/moragents_dockers/agents/src/services/: __init__.py
submodules/moragents_dockers/agents/src/stores/: __init__.py  agent_manager.py  chat_manager.py  key_manager.py  wallet_manager.py  workflow_manager.py
submodules/moragents_dockers/agents/src/tweet_sizzler_agent/: README.md
submodules/moragents_dockers/agents/tests/claim_agent_benchmarks/: README.md  benchmarks.py  config.py  helpers.py
submodules/moragents_dockers/agents/tests/data_agent/: test_agent.py  test_tools.py
submodules/moragents_dockers/agents/tests/news_agent_benchmarks/: README.md  benchmarks.py  config.py  helpers.py
submodules/moragents_dockers/agents/tests/price_fetching/: benchmarks.py  config.py  helpers.py  readme.md
submodules/moragents_dockers/agents/tests/reward_check_agent_benchmarks/: README.md  benchmarks.py  config.py  helpers.py
submodules/moragents_dockers/agents/tests/swap_agent/: test_agent.py  test_tools.py
(+376 files in other folders)
