[tool.poetry]
name = "moragents"
version = "0.1.0"
description = "Server for moragents"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
include = ["src"]

[tool.poetry.dependencies]
python = "^3.12"
llama-cpp-python = "0.2.90"
sentencepiece = "0.2.0"
werkzeug = "2.2.2"
web3 = "7.2.0"
scikit-learn = "1.5.1"
fastapi = "0.115.0"
pymupdf = "1.22.5"
faiss-cpu = "1.8.0.post1"
feedparser = "*"
langchain-text-splitters = "0.3.0"
langchain-community = "0.3.1"
langchain-ollama = "0.2.2"
tweepy = "4.14.0"
uvicorn = "0.31.0"
python-dateutil = "*"
python-multipart = "0.0.12"
beautifulsoup4 = "4.12.3"
selenium = "4.25.0"
torch = "*"
cdp-sdk = "*"
apscheduler = "*"
aiofiles = "24.1.0"
pytz = "*"
pyshorteners = "*"
pillow = "11.0.0"
webdriver-manager = "4.0.2"

[tool.poetry.group.dev.dependencies]
pycodestyle = "^2.10.0"
autopep8 = "^2.0.2"
pytest = "^8.3.2"
pytest-mock = "^3.11.1"
pytest-asyncio = "^0.24.0"
mypy = "^1.4.1"
pylint = "^2.17.5"
black = "^24.0.0"

[tool.poetry.scripts]
login = "login:run"

[tool.black]
line-length = 120


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
